<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:layout_gravity="center"
    android:padding="15dp"
    tools:context=".RgtrnameActivity">

    <ImageView
        android:id="@+id/BackButton"
        android:layout_width="26dp"
        android:layout_height="22dp"
        android:layout_marginBottom="20dp"
        android:contentDescription="@string/todo"
        app:srcCompat="@drawable/baseline_arrow_back_24"
        tools:ignore="ContentDescription" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/what_s_your_name"
        android:textSize="30sp"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/enter_the_name_you_use_in_real_life"
        android:textSize="12sp"/>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center"
        tools:ignore="UselessParent">

        <EditText
            android:id="@+id/FirstName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:autofillHints=""
            android:hint="@string/first_name"
            android:importantForAutofill="no"
            android:inputType="text"
            android:minHeight="48dp"
            android:textColorHint="#546E7A" />

        <EditText
            android:id="@+id/LastName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:hint="@string/last_name"
            android:inputType="text"
            android:minHeight="48dp"
            android:textColorHint="#546E7A"
            tools:ignore="Autofill" />

    </LinearLayout>

    <Button
        android:id="@+id/NextButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/next"
        android:backgroundTint="@color/purple200"
        android:textSize="17sp"/>


</LinearLayout>