<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:layout_gravity="center"
    android:padding="15dp"
    tools:context=".RgtrdobActivity">

    <ImageView
        android:id="@+id/BackButton"
        android:layout_width="26dp"
        android:layout_height="22dp"
        android:layout_marginBottom="20dp"
        android:contentDescription="@string/todo"
        app:srcCompat="@drawable/baseline_arrow_back_24" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/what_s_your_birthday"
        android:textSize="30sp"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:autofillHints=""
        android:text="@string/chose_your_date_of_birth"
        android:textSize="15sp"/>

    <EditText
        android:id="@+id/DateOfBirth"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="date"
        android:minHeight="48dp"
        tools:ignore="LabelFor,SpeakableTextPresentCheck,VisualLintTextFieldSize" />

    <Button
        android:id="@+id/NextButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/next"
        android:textSize="17sp"
        tools:ignore="VisualLintButtonSize" />


</LinearLayout>